--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,31 +3,28 @@
     package="com.elena.app" >
 
     <application
-
         android:allowBackup="true"
         android:icon="@drawable/gnammo_fb"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.elena.app.All_events"
-
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name="com.elena.app.Detail"
-
             android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
+        <activity
+            android:name="com.elena.app.Login"
+            android:label="@string/app_name" >
+        </activity>
+        <activity android:name="com.paypal.android.MEP.PayPalActivity" android:theme="@android:style/Theme.Translucent.NoTitleBar"
+            android:configChanges="keyboardHidden|orientation"/>
 
     </application>
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
