--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,16 +15,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
-    productFlavors {
-    }
+
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:+'
-    compile files('/src/libs/gson-2.2.4.jar')
-    compile files('src/libs/gson-2.2.4.jar')
-    compile files('src/libs/paypal_mpl_5-18.jar')
+    compile fileTree(dir: 'src/libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:19.+'
     compile 'com.google.android.gms:play-services:4.3.23'
-
 }
