--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,13 +3,16 @@
     package="com.elena.app" >
 
     <application
+        android:name="Gnammo"
         android:allowBackup="true"
         android:icon="@drawable/gnammo_fb"
         android:label="@string/app_name"
+
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.elena.app.All_events"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme2">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -35,13 +38,15 @@
             android:value="AIzaSyCnxs7j5tv6B_xAsFyUd2GFPtkx_NX1odk"/>
 
     </application>
+    <uses-sdk android:minSdkVersion="11" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
     <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
     <!-- The following two permissions are not required to use
          Google Maps Android API v2, but are recommended. -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <uses-sdk android:minSdkVersion="9" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
 </manifest>
